fix: fixed some image cropping and added systems

--- a/themes/kross/assets/css/style.css
+++ b/themes/kross/assets/css/style.css
@@ -1101,8 +1101,15 @@ blockquote {
   text-align: center;
 }
 
+.home-crop-image {
+  width: 100%;
+  height: 25vh;
+  object-fit: cover;
+}
+
 /* Mobile-specific */
 @media screen and (max-width: 600px) {
+
   .footer-right {
     text-align: left;
   }
